aa-regex/tests/fails/any_X.rs
use aa_regex::*;

fn main() {
    let wrong = any!('x');
}
